deployment-api.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-redis-deployment
spec:
  selector:
    matchLabels:
      app: api-redis-pod
  replicas: 3
  template:
    metadata:
      labels:
        app: api-redis-pod
    spec:
      containers:
        - name: api-redis-deployment-cnt-1
          image: api-redis:5
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 3000
