deployment-redis.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-deployment
spec:
  selector:
    matchLabels:
      app: redis-pod
  replicas: 2
  template:
    metadata:
      labels:
        app: redis-pod
    spec:
      containers:
        - name: redis-deployment-cnt-1
          image: redis
          command:
            - "redis-server"
            - "--save"
            - "60"
            - "1"
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 6379
          volumeMounts:
            - mountPath: "/data"
              name: data-volume
        # - name: redis-deployment-busybox
        #   image: busybox
        #   command:
        #     - sleep
        #     - "30"
        #   resources:
        #     limits:
        #       memory: "128Mi"
        #       cpu: "500m"
      volumes:
        - name: data-volume
          persistentVolumeClaim:
            claimName: redis-1gb
