deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deployment
spec:
  selector:
    matchLabels:
      app: api-deployment
  replicas: 3
  template:
    metadata:
      labels:
        app: api-deployment
    spec:
      containers:
        - name: api-deployment-cnt-1
          image: simple-api:2
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 3000
