statefulset-redis.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: stateful-redis
spec:
  selector:
    matchLabels:
      app: redis-pod
  serviceName: redis-service
  replicas: 2
  template:
    metadata:
      labels:
        app: redis-pod
    spec:
      containers:
        - name: redis-cnt
          image: redis
          command:
            - "redis-server"
            - "--save"
            - "60"
            - "1"
          ports:
            - containerPort: 6379
          volumeMounts:
            - mountPath: "/data"
              name: data-volume
  volumeClaimTemplates:
    - metadata:
        name: data-volume
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: db-disk
        resources:
          requests:
            storage: 1Gi
