service-api.yml
apiVersion: v1
kind: Service
metadata:
  name: api-redis-service
spec:
  selector:
    app: api-redis-pod
  type: LoadBalancer
  ports:
    - port: 3000
      targetPort: 3000
