service-redis.yml
apiVersion: v1
kind: Service
metadata:
  name: redis-service
spec:
  selector:
    app: redis-pod
  ports:
    - port: 6379
      targetPort: 6379
