service.yml
apiVersion: v1
kind: Service
metadata:
  name: api-service
spec:
  selector:
    app: api-deployment
  type: LoadBalancer
  ports:
    - port: 3000
      targetPort: 3000
