ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-redis-ingress
  labels:
    name: api-redis-ingress
spec:
  rules:
    - host: felipe2.local
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: api-redis-service
                port:
                  number: 3000
